// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PreferredHeroSelector/> Should render in the correct format with preferred heroes 1`] = `
<div
  className="PreferredHeroSelector flex flex-column"
>
  <div
    className="header flex justify-between align-center"
  >
    <div>
      <h3>
        Preferred Heroes
      </h3>
      <div
        className="sub-title"
      >
        Choose up to five preferred heroes to play.
      </div>
    </div>
    <div
      className="flex justify-between hero-slots"
    >
      <div
        className="HeroSlot flex align-center justify-center selected"
        onClick={[Function]}
      >
        <img
          alt="doomfist icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroSlot flex align-center justify-center"
        onClick={[Function]}
      >
        <img
          alt="genji icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroSlot flex align-center justify-center"
        onClick={[Function]}
      >
        <img
          alt="mccree icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroSlot flex align-center justify-center"
        onClick={[Function]}
      >
        <img
          alt="pharah icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroSlot flex align-center justify-center"
        onClick={[Function]}
      >
        <img
          alt="reaper icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="body"
  >
    <div
      className="HeroSelector flex wrap"
    >
      <div
        className="HeroButton selected"
        onClick={[Function]}
      >
        <img
          alt="doomfist icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton disabled"
        onClick={[Function]}
      >
        <img
          alt="genji icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton disabled"
        onClick={[Function]}
      >
        <img
          alt="mccree icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton disabled"
        onClick={[Function]}
      >
        <img
          alt="pharah icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton disabled"
        onClick={[Function]}
      >
        <img
          alt="reaper icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="soldier76 icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="sombra icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="tracer icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="bastion icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="hanzo icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="junkrat icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="mei icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="torbjorn icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="widowmaker icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="dva icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="orisa icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="reinhardt icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="roadhog icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="winston icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="zarya icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="ana icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="lucio icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="mercy icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="moira icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="symmetra icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="zenyatta icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="footer flex align-center"
  >
    <div
      className="last-action-taken"
    >
      <b>
        
      </b>
      
    </div>
    <div
      className="button-group flex"
    >
      <div
        className="flex align-center button-six"
        onClick={[Function]}
      >
        <div
          className="button-content"
        >
          REMOVE
        </div>
      </div>
      <div
        className="save-button button-primary flex align-center"
        onClick={[Function]}
      >
        <div
          className="button-content"
        >
          SAVE
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PreferredHeroSelector/> Should render in the correct format without any preferred heroes 1`] = `
<div
  className="PreferredHeroSelector flex flex-column"
>
  <div
    className="header flex justify-between align-center"
  >
    <div>
      <h3>
        Preferred Heroes
      </h3>
      <div
        className="sub-title"
      >
        Choose up to five preferred heroes to play.
      </div>
    </div>
    <div
      className="flex justify-between hero-slots"
    >
      <div
        className="HeroSlot flex align-center justify-center selected"
        onClick={[Function]}
      >
        1
      </div>
      <div
        className="HeroSlot flex align-center justify-center"
        onClick={[Function]}
      >
        2
      </div>
      <div
        className="HeroSlot flex align-center justify-center"
        onClick={[Function]}
      >
        3
      </div>
      <div
        className="HeroSlot flex align-center justify-center"
        onClick={[Function]}
      >
        4
      </div>
      <div
        className="HeroSlot flex align-center justify-center"
        onClick={[Function]}
      >
        5
      </div>
    </div>
  </div>
  <div
    className="body"
  >
    <div
      className="HeroSelector flex wrap"
    >
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="doomfist icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="genji icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="mccree icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="pharah icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="reaper icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="soldier76 icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="sombra icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="tracer icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="bastion icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="hanzo icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="junkrat icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="mei icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="torbjorn icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="widowmaker icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="dva icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="orisa icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="reinhardt icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="roadhog icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="winston icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="zarya icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="ana icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="lucio icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="mercy icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="moira icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="symmetra icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
      <div
        className="HeroButton"
        onClick={[Function]}
      >
        <img
          alt="zenyatta icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="footer flex align-center"
  >
    <div
      className="last-action-taken"
    >
      <b>
        
      </b>
      
    </div>
    <div
      className="button-group flex"
    />
  </div>
</div>
`;
